--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-16  Andrew Cagney  <cagney@gnu.org>
+
+	* frame.c (fprint_field): New function.
+	(fprint_frame_id): Use fprint_field.
+
 2004-07-10  Mark Kettenis  <kettenis@gnu.org>
 
 	* NEWS: Mention BSD libkvm interface.
