--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-17  Mark Kettenis  <kettenis@gnu.org>
+
+	* configure.in: Define _MSE_INT_H on Solaris 9 too.
+	* configure, config.in: Regenerated.
+
 2004-07-16  Andrew Cagney  <cagney@gnu.org>
 
 	* defs.h (event_loop_p): Replace variable declaration with macro,
