--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-26  Andrew Cagney  <cagney@gnu.org>
+
+	* MAINTAINERS: Mark the xstormy16, sh64, ns32k, mn10300, mcore,
+	and h8300 as broken.
+	* NEWS: END-OF-LIFE frame compatibility module.
+	* PROBLEMS: For "Stack backtraces", remove powerpc, hppa and mips
+	specific comments.
+
 2004-07-21  Andrew Cagney  <cagney@gnu.org>
 
 	* PROBLEMS: Mention breakpoints/1702.
