--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-28  Andrew Cagney  <cagney@gnu.org>
+
+	* PROBLEMS: Mention threads/1650.
+	* NEWS: Mention the NPTL fix.
+
 2004-07-26  Andrew Cagney  <cagney@gnu.org>
 
 	* gdb-mi.el: Move from here ...
