--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-28  Andrew Cagney  <cagney@gnu.org>
 
+	* version.in: Bump to version 6.1.92.
+
+2004-07-28  Andrew Cagney  <cagney@gnu.org>
+
 	* PROBLEMS: Mention threads/1650.
 	* NEWS: Mention the NPTL fix.
 
