--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-07  Andrew Cagney  <cagney@gnu.org>
+
+	GDB 6.2.1 released.
+	* version.in: Bump to version 6.2.1.
+
 2004-08-13  Mark Kettenis  <kettenis@gnu.org>
 
 	* i386-tdep.c (I386_MAX_INSN_LEN): New define.
