--- a/rda/unix/ChangeLog
+++ b/rda/unix/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-29  Jim Blandy  <jimb@redhat.com>
+
+	* Makefile.am (AM_CFLAGS): Add '-Wall'.
+	* Makefile.in: Update.
+
 2004-10-26  Jim Blandy  <jimb@redhat.com>
 
 	Add an architecture object to the Unix server.
