--- a/rda/unix/ChangeLog
+++ b/rda/unix/ChangeLog
@@ -1,5 +1,9 @@
 2004-10-29  Jim Blandy  <jimb@redhat.com>
 
+	* linux-target.c: #include <string.h>, <sys/types.h>, and
+	<sys/wait.h> to get declarations for system functions used in this
+	file.
+	
 	* gdbserv-thread-db.h (stop_lwp, handle_waitstatus, ps_pdread,
 	ps_pdwrite): Add declarations for these functions to
 	gdbserv-thread-db.h.
