--- a/rda/unix/ChangeLog
+++ b/rda/unix/ChangeLog
@@ -1,5 +1,8 @@
 2004-10-31  Jim Blandy  <jimb@redhat.com>
 
+	* stock-breakpoints.c (stock_bp_make_table): Bother to return the
+	breakpoint table constructed.
+
 	* thread-db.c (thread_db_get_thread_reg): Delete unused variable.
 
 	* stock-breakpoints.c: #include all headers necessary to get
